--- a/.github/workflows/main_lojavirtual1.yml
+++ b/.github/workflows/main_lojavirtual1.yml
@@ -2,7 +2,7 @@
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 # More info on Python, GitHub Actions, and Azure App Service: https://aka.ms/python-webapps-actions
 
-name: Build and deploy Python app to Azure Web App - lojavirtual1
+name: Build e deploy da aplicação em Azure Web App com Python 
 
 on:
   push:
@@ -19,12 +19,12 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Python version
+      - name: Configura a versão do Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.13'
 
-      - name: Create and start virtual environment
+      - name: Cria e inicializa o ambiente virtual (VENV)
         run: |
           python -m venv venv
           source venv/bin/activate
@@ -34,7 +34,7 @@ jobs:
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
-      - name: Zip artifact for deployment
+      - name: Compacta os arquivos para fazer o deplyment
         run: zip release.zip ./* -r
 
       - name: Upload artifact for deployment jobs
